package tn.temporise.domain.model;

public enum ModePaiement {
  CARTE_BANCAIRE, VIREMENT, A_LIVRAISON, PAYPAL
}
