package tn.temporise.domain.model;

public enum TypeAuthentification {
  EMAIL, FACEBOOK, GOOGLE
}
