package tn.temporise.domain.model;

public enum TypeSection {
  SOCIATY_INFO, MAIN, DESCRIPTION, OUR_BLOGS, OUR_REVIEWS, HERO, FOOTER, HEADER, CONTACT, CUSTOM, BANNER_SCROLLING, FAQ, OUR_PRODUCTS, CONTENT1, CONTENT2, CONTENT3, CONTENT4, CONTENT5, CONTENT6, CONTENT7, CONTENT8, HTML, RIGHT_BARS
}
